--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     ]
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.22.15",
     "@babel/preset-react": "^7.22.15",
+    "@babel/register": "^7.22.15",
     "babel-loader": "^9.1.3",
     "express": "^4.18.2",
+    "html-webpack-plugin": "^5.5.3",
     "react-server-dom-webpack": "18.3.0-next-1308e49a6-20230330",
     "webpack": "^5.88.2"
   }
