--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "build": "node scripts/build.js",
-    "start": "node server/server.js"
+    "start": "node --conditions react-server server/server.js"
   },
   "dependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.22.15",
